--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -110,8 +110,7 @@
     padding-top: unit(@box-spacing*.5*@base-size,px);
     padding-top: @box-spacing*.5;
     @media screen and (max-width: @screen-xs-max) {
-        margin-top: unit(@box-spacing-vertical*1.5*@base-size,px);
-        margin-top: @box-spacing-vertical*1.5;
+        .spacing(margin-top,@box-spacing-vertical*1.5);
     }
 }
 
