Added .spacing into callout.less

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -26,8 +26,7 @@ body{
 
 .print-only.logo {
 	display: block;
-	margin-bottom: unit(@box-spacing*@base-size,px);
-	margin-bottom: @box-spacing;
+	.spacing(margin-bottom,@box-spacing);
 }
 
 a {
