Typo fix in spacing mixin

--- a/libs/site.less
+++ b/libs/site.less
@@ -1,3 +1,7 @@
+.class {
+	.spacing(margin,1,1,1,1);
+	display: block;
+}
 /* Vendor files */
 @import "vendors/normalize";
 @import "vendors/font-awesome/less/font-awesome";
