--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,3 +1,8 @@
+.class {
+  margin: 16px 16px 16px 16px;
+  margin: 1rem 1rem 1rem 1rem;
+  display: block;
+}
 /* Vendor files */
 /* normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
