Added IE8 button fix to remove icon border and position it correctly

--- a/libs/base/ie.less
+++ b/libs/base/ie.less
@@ -11,10 +11,11 @@
 	    border-top: 6px solid @blue-navigation;
 	}
 
-	/*.btn {
-		line-height: 2.5 !important;
+	.btn {
 		&:after {
-			top: 12.5% !important;
+			line-height: 1.5em !important;
+			top: 25% !important;
+			border-width: 0 !important;
 		}
-	}*/
+	}
 }
