--- a/libs/mixins/spacing.less
+++ b/libs/mixins/spacing.less
@@ -14,17 +14,29 @@
     }
     // If length of @value = 2
     & when (@length = 2) {
-    	@{type}: unit(extract(@value,1)*@base-size,px) unit(extract(@value,2)*@base-size,px);
-    	@{type}: unit(extract(@value,1),rem) unit(extract(@value,2),rem);
+    	@{type}: unit(extract(@value,1)*@base-size,px)
+    			 unit(extract(@value,2)*@base-size,px);
+    	@{type}: unit(extract(@value,1),rem)
+    			 unit(extract(@value,2),rem);
     }
     // If length of @value = 3
     & when (@length = 3) {
-    	@{type}: unit(extract(@value,1)*@base-size,px) unit(extract(@value,2)*@base-size,px) unit(extract(@value,3)*@base-size,px);
-    	@{type}: unit(extract(@value,1),rem) unit(extract(@value,2),rem) unit(extract(@value,3),rem);
+    	@{type}: unit(extract(@value,1)*@base-size,px)
+    			 unit(extract(@value,2)*@base-size,px)
+    			 unit(extract(@value,3)*@base-size,px);
+    	@{type}: unit(extract(@value,1),rem)
+    			 unit(extract(@value,2),rem)
+    			 unit(extract(@value,3),rem);
     }
     // If length of @value = 4
     & when (@length = 4) {
-    	@{type}: unit(extract(@value,1)*@base-size,px) unit(extract(@value,2)*@base-size,px) unit(extract(@value,3)*@base-size,px) unit(extract(@value,4)*@base-size,px);
-    	@{type}: unit(extract(@value,1),rem) unit(extract(@value,2),rem) unit(extract(@value,3),rem) unit(extract(@value,4),rem);
+    	@{type}: unit(extract(@value,1)*@base-size,px)
+    			 unit(extract(@value,2)*@base-size,px)
+    			 unit(extract(@value,3)*@base-size,px)
+    			 unit(extract(@value,4)*@base-size,px);
+    	@{type}: unit(extract(@value,1),rem)
+    			 unit(extract(@value,2),rem)
+    			 unit(extract(@value,3),rem)
+    			 unit(extract(@value,4),rem);
     }
 }
