--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,8 +1,3 @@
-.class {
-  margin: 16px 16px 16px 16px;
-  margin: 1rem 1rem 1rem 1rem;
-  display: block;
-}
 /* Vendor files */
 /* normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
@@ -12760,12 +12755,6 @@ span[id*="overlay_button"] {
 /* IE styles */
 .ie8 {
   min-width: 800px;
-  /*.btn {
-		line-height: 2.5 !important;
-		&:after {
-			top: 12.5% !important;
-		}
-	}*/
 }
 .ie8 input[type=password] {
   font-family: sans-serif;
@@ -12773,6 +12762,11 @@ span[id*="overlay_button"] {
 .ie8 .mega-menu {
   border: 1px solid #99B7C4;
   border-top: 6px solid #99B7C4;
+}
+.ie8 .btn:after {
+  line-height: 1.5em !important;
+  top: 25% !important;
+  border-width: 0 !important;
 }
 /* Print styles */
 @media print {
