Added ie8 div to template.jade

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -33,6 +33,7 @@ html
 		script(src="../libs/vendors/prism/prism.js")
 
 	body
+		<!--[if IE 8]><div class="ie8"><![endif]-->
 		.skip-nav
 			a.screenreader.screenreader--focusable Skip to content
 			a.screenreader.screenreader--focusable Skip to footer
@@ -115,5 +116,6 @@ html
 							br
 							| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 							
+		<!--[if IE 8]></div><![endif]-->
 		script(src="../libs/javascript/advisor.js")
 		script(src="../libs/javascript/core.js")
