Added missing !important

--- a/libs/base/simplegrid.less
+++ b/libs/base/simplegrid.less
@@ -42,7 +42,7 @@
         // columns use an extra 2% as a gutter
         width: unit(percentage((@x/@y)) - 2, ~"% !important");
         margin-right: 2% !important;
-        margin-bottom: 0;
+        margin-bottom: 0 !important;
     }
 
 	// Remove bottom margin from the last nested row, to
