--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2375,7 +2375,7 @@ span.code {
 .ie8 .customcol13 {
   width: 31.33333333% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .customcol13 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -2406,7 +2406,7 @@ span.code {
 .ie8 .customcol49 {
   width: 42.44444444% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .customcol49 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -2437,7 +2437,7 @@ span.code {
 .ie8 .customcol29 {
   width: 20.22222222% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .customcol29 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6670,7 +6670,7 @@ hr {
 .ie8 .span12 {
   width: 98% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span12 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6701,7 +6701,7 @@ hr {
 .ie8 .span11 {
   width: 89.66666667% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span11 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6732,7 +6732,7 @@ hr {
 .ie8 .span10 {
   width: 81.33333333% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span10 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6763,7 +6763,7 @@ hr {
 .ie8 .span9 {
   width: 73% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span9 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6794,7 +6794,7 @@ hr {
 .ie8 .span8 {
   width: 64.66666667% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span8 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6825,7 +6825,7 @@ hr {
 .ie8 .span7 {
   width: 56.33333333% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span7 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6856,7 +6856,7 @@ hr {
 .ie8 .span6 {
   width: 48% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span6 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6887,7 +6887,7 @@ hr {
 .ie8 .span5 {
   width: 39.66666667% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span5 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6918,7 +6918,7 @@ hr {
 .ie8 .span4 {
   width: 31.33333333% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span4 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6949,7 +6949,7 @@ hr {
 .ie8 .span3 {
   width: 23% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span3 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -6980,7 +6980,7 @@ hr {
 .ie8 .span2 {
   width: 14.66666667% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span2 > *[class*="row"]:last-child {
   margin-bottom: 0;
@@ -7011,7 +7011,7 @@ hr {
 .ie8 .span1 {
   width: 6.33333333% !important;
   margin-right: 2% !important;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .span1 > *[class*="row"]:last-child {
   margin-bottom: 0;
